--- a/plugin-manifest.json
+++ b/plugin-manifest.json
@@ -13,7 +13,7 @@
   "platform": "ios",
   "author_name": "Miri Vecselboim",
   "author_email": "m.vecselboim@applicaster.com",
-  "manifest_version": "1.0.0",
+  "manifest_version": "1.1.0",
   "name": "DigicelLoginPlugin",
   "description": "Integration with Digicel Authentication services",
   "type": "login",
@@ -21,7 +21,7 @@
   "identifier": "DigicelLoginPlugin",
   "ui_builder_support": true,
   "dependency_name": "DigicelLoginPlugin",
-  "dependency_version": "2.0.0",
+  "dependency_version": "2.1.0",
   "whitelisted_account_ids": [
     "5af949534da8f300080050f9"
   ],
@@ -245,6 +245,16 @@
         "type": "text",
         "key": "digicel_welcome_screen_title_font",
         "tooltip_text": "digicel welcome screen font"
+    },
+    {
+        "type": "text",
+        "key": "digicel_welcome_screen_second_title",
+        "tooltip_text": "digicel welcome screen title"
+    },
+    {
+         "type": "text",
+         "key": "digicel_welcome_screen_second_title_color",
+         "tooltip_text": "digicel welcome screen second title color"
     },
     {
         "type": "text",
